fix scrollbar

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
 body {
   display: flex;
   height: 100%;
+  margin: 0;
 }
 
 h1, h2 {
